--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 							</div>
 						</div>
 						
-						<div id="db-search" class="mt-sm-0 ">
-							<label for="searchField" class="form-label">
-								<input type="text" id="searchField" placeholder="" style="width: auto">
-							</label>
-							<button class="btn btn-primary" id="searchButton">Search</button>
+						<div id="db-search" class="">
+							<form class="d-flex" autocomplete="on">
+								<input class="form-control me-2" type="search" placeholder="Search" id="searchField" aria-label="Search">
+								<button class="btn btn-outline-success" id="searchButton" type="submit">Search</button>
+							</form>
 						</div>
 						
 						<div id="addModal" class="modal">
