--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 	<head>
 		<meta charset="UTF-8">
-		<title>Title</title>
+		<title>Employee DB</title>
 		<link rel="stylesheet" href="./css/styles.css">
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="./css/bootstrap.css">
@@ -191,7 +191,7 @@
 					</tfoot>
 				</table>
 			</div>
-			
+		
 		</div>
 		<script type="module" src="./main.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
