--- a/index.html
+++ b/index.html
@@ -195,5 +195,7 @@
 		</div>
 		<script type="module" src="./main.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	
 	</body>
 </html>
